$Id: ChangeLog,v 1.72 2008/11/10 15:35:28 tho Exp $

ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html

MaKL 1.8.z
	- cf utilities (i.e. grep, sed, tr, ...) also in toolchain
	- Solaris/GCC support added
	- DragonFly BSD support added
	- simplified auto-configuration procedure (the toolchain creation step
	  has been absorbed into configure.sh - see INSTALL)
	- added explicit --bourne_shell=... argument to top level configure
	- makl-conf also accepts non executable configure scripts
	- Intel C/C++ compiler support on Linux (icc-linux.tc)
	- produce dynamic libraries (DLL's) on Windows via MinGW and Cygwin
	- added OBJDIR to prog and lib templates for multiple target builds
	- added --makl-* command line flags to maklsh
	- makl* tools revamped
	- fix help file generation if configure.help file doesn't exist
	- added UNIX man pages for all makl* commands
	- fix: cut truncated custom args with '=' sign inside value

MaKL 1.7.2
	- fix shell expansion errors by passing file parameter to compilation
	  function instead of using pipe
	- dist.mk: blanks in DISTRECIPE filenames fix
	- NO_LY_AUTODEP added to explicitly disable lex/yacc autodep features
	- EXTRA_OBJS added to extend the list of objects that build a program
	  and/or library (e.g. those generated by lex/yacc).
	- support for static library dependencies
	- explicit 'distclean' target (and related DISTCLEANFILES variable) added
	  to all mk templates
	- makl_checkheader: new arg to specify any header file to include before
	  the one we're looking for
	- subdir template rewrite
	- installed makl commands can be {pre,suf}fixed via --script_{pre,suf}fix 
	  configure arguments
	- added PROG_{PRE,POST}FIX and SCRIPT_{PRE,POST}FIX variables to modify
	  the built/installed program/script name
	- small refactoring of lib.mk and prog.mk templates
	- add assert-var function to test variables before use
	- fix toolchain hardcoding error in configure

MaKL 1.7.1